src/objects/LQ_Opportunity__x.object
<CustomObject>
    <externalDataSource>Legacy_Quintiles</externalDataSource>
    <externalName>LQ Opportunity</externalName>
    <fields>
        <fullName>APAC_Triage_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APAC_Triage__c</externalDeveloperName>
        <label>APAC Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id_c__c</fullName>
        <externalDeveloperName>APTS_External_Id__c</externalDeveloperName>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZ_group_c__c</fullName>
        <externalDeveloperName>AZ_group__c</externalDeveloperName>
        <label>AstraZeneca Operational Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCOUT</fullName>
                </value>
                <value>
                    <fullName>MARS A&amp;R</fullName>
                </value>
                <value>
                    <fullName>MARS Project Level Pricing</fullName>
                </value>
                <value>
                    <fullName>ECD non-CPU</fullName>
                </value>
                <value>
                    <fullName>ECD Wrap-around</fullName>
                </value>
                <value>
                    <fullName>ECD A&amp;R</fullName>
                </value>
                <value>
                    <fullName>RWLP-ECOSSE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Display_c__c</fullName>
        <externalDeveloperName>Account_Name_Display__c</externalDeveloperName>
        <label>Account Name Display</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Months_c__c</fullName>
        <externalDeveloperName>Active_Months__c</externalDeveloperName>
        <label>Active Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Probability_Date_c__c</fullName>
        <externalDeveloperName>Actual_Probability_Date__c</externalDeveloperName>
        <label>Actual Probability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Probability_c__c</fullName>
        <externalDeveloperName>Actual_Probability__c</externalDeveloperName>
        <label>Actual Probability(%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Competitor_c__c</fullName>
        <externalDeveloperName>Additional_Competitor__c</externalDeveloperName>
        <label>Additional Competitor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes_c__c</fullName>
        <externalDeveloperName>Additional_Notes__c</externalDeveloperName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Primary_Reason_Detail_c__c</fullName>
        <externalDeveloperName>Additional_Primary_Reason_Detail__c</externalDeveloperName>
        <label>Additional Primary Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service bundling</fullName>
                </value>
                <value>
                    <fullName>Discount above preferred rates</fullName>
                </value>
                <value>
                    <fullName>Cost containment</fullName>
                </value>
                <value>
                    <fullName>Service delivery excellence/KPIs</fullName>
                </value>
                <value>
                    <fullName>EMCO</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>DM/Bios</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-25%</fullName>
                </value>
                <value>
                    <fullName>25-30%</fullName>
                </value>
                <value>
                    <fullName>30%+</fullName>
                </value>
                <value>
                    <fullName>Testing Price</fullName>
                </value>
                <value>
                    <fullName>Validation Fees</fullName>
                </value>
                <value>
                    <fullName>Evidence Driven Design (EDD)</fullName>
                </value>
                <value>
                    <fullName>Accelerated Site ID &amp; Activation (ASIDA)</fullName>
                </value>
                <value>
                    <fullName>Accelerated Patient Access, Recruitment &amp; Engagement (APARE)</fullName>
                </value>
                <value>
                    <fullName>IQVIA seen as Leader in Indication / Therapeutic Area/Scientific expertise</fullName>
                </value>
                <value>
                    <fullName>IQVIA seen as being flexible</fullName>
                </value>
                <value>
                    <fullName>IQVIA can customize to biotech needs/meet timelines</fullName>
                </value>
                <value>
                    <fullName>Good QA on current/past study</fullName>
                </value>
                <value>
                    <fullName>Good Clinical Operations delivery on current/previous study</fullName>
                </value>
                <value>
                    <fullName>Strong resourcing on current/previous study</fullName>
                </value>
                <value>
                    <fullName>Strongmedical monitoring on current/ previous study</fullName>
                </value>
                <value>
                    <fullName>Good communication with the team on current/past study</fullName>
                </value>
                <value>
                    <fullName>All rates too high</fullName>
                </value>
                <value>
                    <fullName>CRA rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Count_of_Passthroughs_c__c</fullName>
        <externalDeveloperName>Admin_Count_of_Passthroughs__c</externalDeveloperName>
        <label>zz?Admin Count of Passthroughs</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Count_of_Products_c__c</fullName>
        <externalDeveloperName>Admin_Count_of_Products__c</externalDeveloperName>
        <label>zz?Admin Count of Products</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Sum_of_Awarded_Price_c__c</fullName>
        <externalDeveloperName>Admin_Sum_of_Awarded_Price__c</externalDeveloperName>
        <label>zz?Admin Sum of Awarded Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Sum_of_Contract_Signed_c__c</fullName>
        <externalDeveloperName>Admin_Sum_of_Contract_Signed__c</externalDeveloperName>
        <label>zz?Admin Sum of Contract Signed</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Plan_last_update_date_c__c</fullName>
        <externalDeveloperName>Advance_Plan_last_update_date__c</externalDeveloperName>
        <label>Advance Plan last update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_delivery_timeline_c__c</fullName>
        <externalDeveloperName>Agreed_delivery_timeline__c</externalDeveloperName>
        <label>Agreed delivery timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_upon_delivery_timeline_with_Cust__c</fullName>
        <externalDeveloperName>Agreed_upon_delivery_timeline_with_Cust__c</externalDeveloperName>
        <label>Agreed upon delivery timeline with Cust?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Indicators_c__c</fullName>
        <externalDeveloperName>All_Indicators__c</externalDeveloperName>
        <label>All Indicators</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_USD_c__c</fullName>
        <externalDeveloperName>Amount_USD__c</externalDeveloperName>
        <label>Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_RFP_Date_c__c</fullName>
        <externalDeveloperName>Anticipated_RFP_Date__c</externalDeveloperName>
        <label>Anticipated RFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applying_for_a_New_CIRM_Grant_c__c</fullName>
        <externalDeveloperName>Applying_for_a_New_CIRM_Grant__c</externalDeveloperName>
        <label>Applying for a New CIRM Grant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DISC 1</fullName>
                </value>
                <value>
                    <fullName>DISC 2</fullName>
                </value>
                <value>
                    <fullName>DISC 3</fullName>
                </value>
                <value>
                    <fullName>TRAN 1</fullName>
                </value>
                <value>
                    <fullName>TRAN 2</fullName>
                </value>
                <value>
                    <fullName>TRAN 3</fullName>
                </value>
                <value>
                    <fullName>CLIN 1</fullName>
                </value>
                <value>
                    <fullName>CLIN 2</fullName>
                </value>
                <value>
                    <fullName>CLIN 3</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal_Discount_Percent_c__c</fullName>
        <externalDeveloperName>Apttus_Proposal__Discount_Percent__c</externalDeveloperName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Are_you_satisfied_there_are_c__c</fullName>
        <externalDeveloperName>Are_you_satisfied_there_are__c</externalDeveloperName>
        <label>Are you satisfied there are:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No size or design issues</fullName>
                </value>
                <value>
                    <fullName>No other issues which may cause ethical concerns</fullName>
                </value>
                <value>
                    <fullName>Yes to both</fullName>
                </value>
                <value>
                    <fullName>No to either or both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Medical_Advisor_c__c</fullName>
        <externalDeveloperName>Assigned_Medical_Advisor__c</externalDeveloperName>
        <label>Assigned Medical Advisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_TSL_c__c</fullName>
        <externalDeveloperName>Assigned_TSL__c</externalDeveloperName>
        <label>Assigned TSL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allison Link</fullName>
                </value>
                <value>
                    <fullName>Amy DelMedico</fullName>
                </value>
                <value>
                    <fullName>Andreas Lindackers</fullName>
                </value>
                <value>
                    <fullName>Ann Duncan</fullName>
                </value>
                <value>
                    <fullName>Ataali Shaikh</fullName>
                </value>
                <value>
                    <fullName>Cathy Vanbelle</fullName>
                </value>
                <value>
                    <fullName>Chelsea MacMeekin</fullName>
                </value>
                <value>
                    <fullName>Chris Giordano</fullName>
                </value>
                <value>
                    <fullName>Dominique Blankaert</fullName>
                </value>
                <value>
                    <fullName>Eduard van Rijen</fullName>
                </value>
                <value>
                    <fullName>Elisabeth Schrader</fullName>
                </value>
                <value>
                    <fullName>Ellen Boules</fullName>
                </value>
                <value>
                    <fullName>Elspeth Sneddon</fullName>
                </value>
                <value>
                    <fullName>Filippo Guglielmetti</fullName>
                </value>
                <value>
                    <fullName>Giovanni Piazzi</fullName>
                </value>
                <value>
                    <fullName>IIM other</fullName>
                </value>
                <value>
                    <fullName>Jan Lotriet</fullName>
                </value>
                <value>
                    <fullName>Jeffrey Stewart</fullName>
                </value>
                <value>
                    <fullName>Jerome Armellini</fullName>
                </value>
                <value>
                    <fullName>John Sneed</fullName>
                </value>
                <value>
                    <fullName>Julie Faulkner</fullName>
                </value>
                <value>
                    <fullName>Katherine Smith</fullName>
                </value>
                <value>
                    <fullName>Kremena Ilcheva</fullName>
                </value>
                <value>
                    <fullName>Maria Laura Mollerach</fullName>
                </value>
                <value>
                    <fullName>Michael Edmund Abbs</fullName>
                </value>
                <value>
                    <fullName>Michelle Archibald</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Neil Leslie</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paul Phillips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Products_Family_c__c</fullName>
        <externalDeveloperName>Associated_Opportunity_Products_Family__c</externalDeveloperName>
        <label>z?Associated Opportunity Products Family</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Product_Codes_c__c</fullName>
        <externalDeveloperName>Associated_Product_Codes__c</externalDeveloperName>
        <label>zz?Associated Product Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Awarded_Date_for_Reporting_c__c</fullName>
        <externalDeveloperName>Awarded_Date_for_Reporting__c</externalDeveloperName>
        <label>Awarded date (for reporting)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BD_Comments_c__c</fullName>
        <externalDeveloperName>BD_Comments__c</externalDeveloperName>
        <label>BD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRIC_Included_c__c</fullName>
        <externalDeveloperName>BRIC_Included__c</externalDeveloperName>
        <label>zz?BRIC Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRKREPORT_BRNSHRKOwnerRole_c__c</fullName>
        <externalDeveloperName>BRNSHRKREPORT__BRNSHRKOwnerRole__c</externalDeveloperName>
        <label>Owner Role</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK_ContentInvitationCount_c__c</fullName>
        <externalDeveloperName>BRNSHRK__ContentInvitationCount__c</externalDeveloperName>
        <label>Content Invitation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK_ContentLastSentDate_c__c</fullName>
        <externalDeveloperName>BRNSHRK__ContentLastSentDate__c</externalDeveloperName>
        <label>Content Last Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK_ContentViewCount_c__c</fullName>
        <externalDeveloperName>BRNSHRK__ContentViewCount__c</externalDeveloperName>
        <label>Content View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK_ContentViewRate_c__c</fullName>
        <externalDeveloperName>BRNSHRK__ContentViewRate__c</externalDeveloperName>
        <label>View Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK_DaysSinceLastContentSent_c__c</fullName>
        <externalDeveloperName>BRNSHRK__DaysSinceLastContentSent__c</externalDeveloperName>
        <label>Days Since Last Content Sent</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Impact_c__c</fullName>
        <externalDeveloperName>Backlog_Impact__c</externalDeveloperName>
        <label>Backlog Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ballpark_Received_c__c</fullName>
        <externalDeveloperName>Ballpark_Received__c</externalDeveloperName>
        <label>Ballpark Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ballpark_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Ballpark__c</externalDeveloperName>
        <label>Ballpark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Defense_Presentation_Uploaded_c__c</fullName>
        <externalDeveloperName>Bid_Defense_Presentation_Uploaded__c</externalDeveloperName>
        <label>Bid Defense Presentation Uploaded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No Presentation Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines_Line_Items_c__c</fullName>
        <externalDeveloperName>BigMachines__Line_Items__c</externalDeveloperName>
        <label>Line Items</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Binary_Decision_c__c</fullName>
        <externalDeveloperName>Binary_Decision__c</externalDeveloperName>
        <label>Path Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance to Potential</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Binary_Decision_reporting_c__c</fullName>
        <externalDeveloperName>Binary_Decision_reporting__c</externalDeveloperName>
        <label>Binary Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BioServices_Advion_c__c</fullName>
        <externalDeveloperName>BioServices_Advion__c</externalDeveloperName>
        <label>BioServices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q² BioSciences</fullName>
                </value>
                <value>
                    <fullName>Biocore</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BioServices_Location_c__c</fullName>
        <externalDeveloperName>BioServices_Location__c</externalDeveloperName>
        <label>Q2 BioSciences Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marietta</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Ithaca</fullName>
                </value>
                <value>
                    <fullName>OSS</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Biomarker-Ithaca</fullName>
                </value>
                <value>
                    <fullName>Bio therapeutics-Ithaca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BioServices_Quote_No_c__c</fullName>
        <externalDeveloperName>BioServices_Quote_No__c</externalDeveloperName>
        <label>Q2 BioSciences Quote No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biomarker_Selection_c__c</fullName>
        <externalDeveloperName>Biomarker_Selection__c</externalDeveloperName>
        <label>Predictive Biomarker</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABL1</fullName>
                </value>
                <value>
                    <fullName>AKT1</fullName>
                </value>
                <value>
                    <fullName>ALK</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>BRAF</fullName>
                </value>
                <value>
                    <fullName>CDH1</fullName>
                </value>
                <value>
                    <fullName>CDKN2A</fullName>
                </value>
                <value>
                    <fullName>CSF1R</fullName>
                </value>
                <value>
                    <fullName>CTNNB1</fullName>
                </value>
                <value>
                    <fullName>EGFR</fullName>
                </value>
                <value>
                    <fullName>ERBB2</fullName>
                </value>
                <value>
                    <fullName>ERBB4</fullName>
                </value>
                <value>
                    <fullName>EZH2</fullName>
                </value>
                <value>
                    <fullName>FBXW7</fullName>
                </value>
                <value>
                    <fullName>FGFR1</fullName>
                </value>
                <value>
                    <fullName>FGFR2</fullName>
                </value>
                <value>
                    <fullName>FGFR3</fullName>
                </value>
                <value>
                    <fullName>FLT3</fullName>
                </value>
                <value>
                    <fullName>GNA11</fullName>
                </value>
                <value>
                    <fullName>GNAQ</fullName>
                </value>
                <value>
                    <fullName>GNAS</fullName>
                </value>
                <value>
                    <fullName>HNF1A</fullName>
                </value>
                <value>
                    <fullName>HRAS</fullName>
                </value>
                <value>
                    <fullName>IDH1</fullName>
                </value>
                <value>
                    <fullName>IDH2</fullName>
                </value>
                <value>
                    <fullName>JAK2</fullName>
                </value>
                <value>
                    <fullName>JAK3</fullName>
                </value>
                <value>
                    <fullName>KDR</fullName>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biomarker_selection_enriched_c__c</fullName>
        <externalDeveloperName>Biomarker_selection_enriched__c</externalDeveloperName>
        <label>Predictive Biomarker Patient Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Solution_Project_Description_c__c</fullName>
        <externalDeveloperName>Brand_Solution_Project_Description__c</externalDeveloperName>
        <label>Service Segment Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Solutions_Project_c__c</fullName>
        <externalDeveloperName>Brand_Solutions_Project__c</externalDeveloperName>
        <label>Service Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMS</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>IME</fullName>
                </value>
                <value>
                    <fullName>Trade and Managed Markets</fullName>
                </value>
                <value>
                    <fullName>MSL</fullName>
                </value>
                <value>
                    <fullName>MSLs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgetary_Impact_to_Third_Party_Vendor_c__c</fullName>
        <externalDeveloperName>Budgetary_Impact_to_Third_Party_Vendor__c</externalDeveloperName>
        <label>Budgetary Impact to Third Party Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Area_c__c</fullName>
        <externalDeveloperName>Business_Area__c</externalDeveloperName>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Cosmetics</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Opthalmics</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BioPharma</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIRM_Eligible_c__c</fullName>
        <externalDeveloperName>CIRM_Eligible__c</externalDeveloperName>
        <label>CIRM Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIRM_Grant_ID_c__c</fullName>
        <externalDeveloperName>CIRM_Grant_ID__c</externalDeveloperName>
        <label>CIRM Grant ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COE_Contact_c__c</fullName>
        <externalDeveloperName>COE_Contact__c</externalDeveloperName>
        <label>COE Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>